Replace DCHECK() upon unexpected x11 event time with a workaround

BUG=611950

Review-Url: https://codereview.chromium.org/1982203002
Cr-Commit-Position: refs/heads/master@{#397315}

Former-commit-id: 905cedbf079a83c048c9cfcf526210efcf7c4abd